--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DATA_SIZE=1k
 CHUNK_SIZE=200
-MODEL_TARGET=local
+MODEL_TARGET=gcs
 
 # GCP Project
 GCP_PROJECT_WAGON=wagon-public-datasets
@@ -8,7 +8,11 @@ GCP_PROJECT=buoyant-airport-374911
 GCP_REGION=europe-west1
 
 # Cloud Storage
-BUCKET_NAME=le_wagon_ml_ops
+BUCKET_NAME=tumor_classification
+
+#Local path for donwloading the model
+GCS_BUCKET= gs://tumor_classification/model.h5
+LOCAL_REGISTRY_PATH= \\wsl.localhost\Ubuntu\home\francescosimonetti\code\CatalinaGroba\tumor_classification
 
 # BigQuery
 BQ_REGION=EU
